--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-    "name": "redux-boilerplate",
-    "version": "1.0.0",
-    "description": "A simple boilerplate for my projects",
-    "main": "./dist/index_bundle.js",
-    "scripts": {
-        "dev": "webpack-dev-server --inline --hot",
-        "prod": "webpack --config webpack.config.prod.js",
-        "test": "ava \"**/*.test.js\"",
-        "watch:test": "npm run test -- --watch"
-    },
-    "author": "mstaicu",
-    "license": "MIT",
-    "devDependencies": {
-        "ava": "^0.17.0",
-        "babel-core": "^6.18.0",
-        "babel-loader": "^6.2.5",
-        "babel-polyfill": "^6.16.0",
-        "babel-preset-es2015": "^6.18.0",
-        "babel-preset-react": "^6.16.0",
-        "babel-preset-stage-0": "^6.16.0",
-        "css-loader": "^0.25.0",
-        "extract-text-webpack-plugin": "^1.0.1",
-        "html-webpack-plugin": "^2.24.0",
-        "postcss-cssnext": "^2.8.0",
-        "postcss-loader": "^1.0.0",
-        "react": "^15.3.2",
-        "react-dom": "^15.3.2",
-        "react-redux": "^4.4.5",
-        "redux": "^3.6.0",
-        "style-loader": "^0.13.1",
-        "webpack": "^1.13.2",
-        "webpack-dev-server": "^1.16.2"
-    },
-    "ava": {
-        "require": "babel-register",
-        "babel": "inherit"
-    }
+  "name": "redux-boilerplate",
+  "version": "1.0.0",
+  "description": "A simple boilerplate for my projects",
+  "main": "./dist/index_bundle.js",
+  "scripts": {
+    "dev": "webpack-dev-server --inline --hot",
+    "prod": "webpack --config webpack.config.prod.js",
+    "test": "ava \"**/*.test.js\"",
+    "watch:test": "npm run test -- --watch"
+  },
+  "author": "mstaicu",
+  "license": "MIT",
+  "devDependencies": {
+    "ava": "^0.17.0",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.24.0",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-loader": "^1.0.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.14.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "ava": {
+    "require": "babel-register",
+    "babel": "inherit"
+  }
 }
