--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-    "presets": [
-        "es2015", "stage-0", "react"
-    ]
+  "plugins": ["transform-object-rest-spread"],
+  "presets": [
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 versions", "safari >= 7"]
+      }
+    }],
+    "react"
+  ]
 }
