feat(react-redux): Updating to Webpack 3, React Router and dropping CSS Modules

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,14 @@
 {
   "plugins": ["transform-object-rest-spread"],
   "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["last 2 versions", "safari >= 7"]
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions", "safari >= 7"]
+        }
       }
-    }],
+    ],
     "react"
   ]
 }
