--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
   "name": "redux-boilerplate",
   "version": "1.0.0",
-  "description": "A simple boilerplate for my projects",
-  "main": "./dist/index_bundle.js",
-  "scripts": {
-    "dev": "webpack-dev-server --inline --hot",
-    "prod": "webpack --config webpack.config.prod.js",
-    "test": "ava \"**/*.test.js\"",
-    "watch:test": "npm run test -- --watch"
-  },
-  "author": "mstaicu",
-  "license": "MIT",
+  "description": "A short and concise boilerplate tailored for my personal projects",
+  "main": "src/index.js",
   "devDependencies": {
-    "ava": "^0.17.0",
-    "babel-core": "^6.18.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-react": "^6.16.0",
-    "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.24.0",
-    "postcss-cssnext": "^2.8.0",
-    "postcss-loader": "^1.0.0",
-    "react": "*",
-    "react-dom": "*",
-    "react-redux": "*",
-    "redux": "*",
-    "redux-saga": "*",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
+    "babel-core": "6.25.0",
+    "babel-loader": "7.1.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-env": "1.6.0",
+    "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.4",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-redux": "5.0.5",
+    "react-router-dom": "4.1.1",
+    "redux": "3.7.2",
+    "redux-saga": "0.15.4",
+    "style-loader": "0.18.2",
+    "url-loader": "0.5.9",
+    "webpack": "3.2.0",
+    "webpack-dev-server": "2.5.1"
   },
-  "ava": {
-    "require": "babel-register",
-    "babel": "inherit"
-  }
+  "scripts": {
+    "build": "webpack -p --env=prod",
+    "dev": "webpack-dev-server --env=dev"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mstaicu/redux-boilerplate.git"
+  },
+  "author": "Mircea Staicu <mstaicu@yahoo.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mstaicu/redux-boilerplate/issues"
+  },
+  "homepage": "https://github.com/mstaicu/redux-boilerplate#readme"
 }
