--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "redux-boilerplate",
   "version": "1.0.0",
   "description": "A short and concise boilerplate tailored for my personal projects",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "devDependencies": {
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
+    "babel-plugin-dynamic-import-webpack": "1.0.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-polyfill": "6.23.0",
     "babel-preset-env": "1.6.0",
@@ -25,7 +27,7 @@
     "webpack-dev-server": "2.5.1"
   },
   "scripts": {
-    "build": "webpack -p --env=prod",
+    "build": "webpack --env=prod",
     "dev": "webpack-dev-server --env=dev"
   },
   "repository": {
