--- a/package.json
+++ b/package.json
@@ -3,24 +3,26 @@
   "version": "1.0.0",
   "description": "A short and concise boilerplate tailored for my personal projects",
   "main": "./src/index.js",
+  "dependencies": {
+    "babel-polyfill": "6.23.0",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-redux": "5.0.5",
+    "react-router-dom": "4.1.1",
+    "redux": "3.7.2",
+    "redux-saga": "0.15.4"
+  },
   "devDependencies": {
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-dynamic-import-webpack": "1.0.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-polyfill": "6.23.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-redux": "5.0.5",
-    "react-router-dom": "4.1.1",
-    "redux": "3.7.2",
-    "redux-saga": "0.15.4",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
     "webpack": "3.2.0",
