--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,5 @@
 {
-  "plugins": [
-    "transform-object-rest-spread",
-    "dynamic-import-webpack",
-    "transform-class-properties"
-  ],
+  "plugins": ["transform-object-rest-spread"],
   "presets": [
     [
       "env",
