--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "style-loader": "0.18.2",
+    "uglifyjs-webpack-plugin": "0.4.6",
     "url-loader": "0.5.9",
     "webpack": "3.2.0",
     "webpack-dev-server": "2.5.1"
