--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
-  "plugins": ["transform-object-rest-spread"],
+  "plugins": [
+    "transform-object-rest-spread",
+    "syntax-dynamic-import",
+    "transform-class-properties"
+  ],
   "presets": [
     [
       "env",
