--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,5 @@
 {
-  "plugins": [
-    "transform-object-rest-spread",
-    "syntax-dynamic-import",
-    "transform-class-properties"
-  ],
+  "plugins": ["transform-object-rest-spread", "syntax-dynamic-import"],
   "presets": [
     [
       "env",
